--- a/trunk/src/kernel_trace_viewer.html
+++ b/trunk/src/kernel_trace_viewer.html
@@ -7,22 +7,7 @@ found in the LICENSE file.
 -->
 <head i18n-values="dir:textdirection;">
 <title>Interactive Timeline Tests</title>
-<link rel="stylesheet" href="timeline.css">
-<link rel="stylesheet" href="timeline_view.css">
 <script src="base.js"></script>
-<script src="event_target.js"></script>
-<script src="cr/ui.js"></script>
-<script src="timeline_model.js"></script>
-<script src="linux_perf_importer.js"></script>
-<script src="trace_event_importer.js"></script>
-<script src="sorted_array_utils.js"></script>
-<script src="measuring_stick.js"></script>
-<script src="overlay.js"></script>
-<script src="timeline.js"></script>
-<script src="timeline_track.js"></script>
-<script src="timeline_view.js"></script>
-<script src="fast_rect_renderer.js"></script>
-<script src="test_utils.js"></script>
 <style>
   .view {
     overflow: hidden;
@@ -42,7 +27,11 @@ found in the LICENSE file.
   var linuxPerfData;
   var traceEventData;
   var timelineViewEl;
+
   function onLoad() {
+    if (!document.body)
+      document.addEventListener('DOMContentLoaded', onLoad);
+
     var dirname;
     if (window.location.search) {
       var q = {};
@@ -82,7 +71,11 @@ found in the LICENSE file.
     timelineViewEl.timeline.focusElement = timelineViewEl;
   }
 
-  document.addEventListener('DOMContentLoaded', onLoad);
+  base.defineModule('kernel_trace_viewer')
+      .dependsOn('timeline_view',
+                 'test_utils')
+      .runWhenLoaded(onLoad);
+
   </script>
 </body>
 </html>
