--- a/trunk/src/profiling_view_test.html
+++ b/trunk/src/profiling_view_test.html
@@ -5,33 +5,9 @@ Copyright (c) 2012 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-<head i18n-values="dir:textdirection;">
+<head>
 <title>ProfilingView tests</title>
-<link rel="stylesheet" href="profiling_view.css">
-<link rel="stylesheet" href="timeline_view.css">
-<link rel="stylesheet" href="overlay.css">
-<link rel="stylesheet" href="timeline_analysis.css">
-<link rel="stylesheet" href="timeline.css">
 <script src="base.js"></script>
-<script src="unittest.js"></script>
-<script src="event_target.js"></script>
-<script src="ui.js"></script>
-<script src="overlay.js"></script>
-<script src="measuring_stick.js"></script>
-<script src="profiling_view.js"></script>
-<script src="timeline_analysis.js"></script>
-<script src="timeline_view.js"></script>
-<script src="timeline_model.js"></script>
-<script src="linux_perf_importer.js"></script>
-<script src="trace_event_importer.js"></script>
-<script src="timeline.js"></script>
-<script src="timeline_track.js"></script>
-<script src="sorted_array_utils.js"></script>
-<script src="fast_rect_renderer.js"></script>
-<script src="test_utils.js"></script>
-<script>
-  unittest.runAllTests();
-</script>
 <style>
   .profiling-view {
     border: 1px solid black;
@@ -39,8 +15,16 @@ found in the LICENSE file.
 </style>
 </head>
 <body>
-  <script>
-    'use strict';
+<script>
+'use strict';
+
+base.defineModule('timeline_test')
+    .dependsOn('unittest',
+               'test_utils',
+               'profiling_view')
+    .runAllTests(function() {
+
+    var tests = {};
 
     /*
      * Just enough of the TracingController to support the tests below.
@@ -95,7 +79,7 @@ found in the LICENSE file.
     /* This test just instantiates a ProflingView and adds it to the DOM
      * to help with non-unittest UI work.
      */
-    function testInstantiate() {
+    tests.testInstantiate = function() {
       var view = new tracing.ProfilingView();
       view.tracingController = new FakeTracingController();
       view.focusElement = view;
@@ -118,7 +102,7 @@ found in the LICENSE file.
       assertTrue(!!view.timelineView.model);
     }
 
-    function testRecordNonCros() {
+    tests.testRecordNonCros = function() {
       var old = base.isChromeOS;
       base.isChromeOS = false;
       try {
@@ -128,7 +112,7 @@ found in the LICENSE file.
       }
     }
 
-    function testRecordCros() {
+    tests.testRecordCros = function() {
       var old = base.isChromeOS;
       base.isChromeOS = true;
       try {
@@ -137,7 +121,8 @@ found in the LICENSE file.
         base.isChromeOS = old;
       }
     }
-
+    return tests;
+});
   </script>
 </body>
 </html>
