--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <!--
 Copyright (c) 2012 The Chromium Authors. All rights reserved.
@@ -8,18 +8,29 @@ found in the LICENSE file.
 <head>
 <title>TimelineModel tests</title>
 <script src="base.js"></script>
-<script src="unittest.js"></script>
-<script src="event_target.js"></script>
-<script src="test_utils.js"></script>
-<script src="timeline_model.js"></script>
-<script>
-  unittest.runAllTests();
-</script>
-
+<style>
+  .timeline-view {
+    border: 1px solid black;
+    margin: 10px;
+  }
+  .timeline-find-dialog {
+    border: 1px solid black;
+    margin: 10px;
+  }
+</style>
 </head>
 <body>
 <script>
 'use strict';
+
+base.defineModule('timeline_test')
+    .dependsOn('unittest',
+               'test_utils',
+               'timeline_view')
+    .runAllTests(function() {
+
+var tests = {};
+
 var TimelineCpu = tracing.TimelineCpu;
 var TimelineSlice = tracing.TimelineSlice;
 var TimelineThreadSlice = tracing.TimelineThreadSlice;
@@ -31,14 +42,14 @@ var TimelineAsyncSlice = tracing.TimelineAsyncSlice;
 var TimelineAsyncSliceGroup = tracing.TimelineAsyncSliceGroup;
 var newAsyncSlice = test_utils.newAsyncSlice;
 
-function testThreadBounds_Empty() {
+tests.testThreadBounds_Empty = function() {
   var t = new TimelineThread(new TimelineProcess(7), 1);
   t.updateBounds();
   assertEquals(undefined, t.minTimestamp);
   assertEquals(undefined, t.maxTimestamp);
 }
 
-function testThreadBounds_SubRow() {
+tests.testThreadBounds_SubRow = function() {
   var t = new TimelineThread(new TimelineProcess(7), 1);
   t.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
   t.updateBounds();
@@ -46,7 +57,7 @@ function testThreadBounds_SubRow() {
   assertEquals(4, t.maxTimestamp);
 }
 
-function testThreadBounds_AsyncSliceGroup() {
+tests.testThreadBounds_AsyncSliceGroup = function() {
   var t = new TimelineThread(new TimelineProcess(7), 1);
   t.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
   t.asyncSlices.push(newAsyncSlice(0.1, 5, t, t));
@@ -55,14 +66,14 @@ function testThreadBounds_AsyncSliceGroup() {
   assertEquals(5.1, t.maxTimestamp);
 }
 
-function testModelBounds_EmptyModel() {
+tests.testModelBounds_EmptyModel = function() {
   var m = new TimelineModel();
   m.updateBounds();
   assertEquals(undefined, m.minTimestamp);
   assertEquals(undefined, m.maxTimestamp);
 }
 
-function testModelBounds_OneEmptyThread() {
+tests.testModelBounds_OneEmptyThread = function() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   m.updateBounds();
@@ -70,7 +81,7 @@ function testModelBounds_OneEmptyThread() {
   assertEquals(undefined, m.maxTimestamp);
 }
 
-function testModelBounds_OneThread() {
+tests.testModelBounds_OneThread = function() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   t.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
@@ -79,7 +90,7 @@ function testModelBounds_OneThread() {
   assertEquals(4, m.maxTimestamp);
 }
 
-function testModelBounds_OneThreadAndOneEmptyThread() {
+tests.testModelBounds_OneThreadAndOneEmptyThread = function() {
   var m = new TimelineModel();
   var t1 = m.getOrCreateProcess(1).getOrCreateThread(1);
   t1.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
@@ -89,14 +100,14 @@ function testModelBounds_OneThreadAndOneEmptyThread() {
   assertEquals(4, m.maxTimestamp);
 }
 
-function testCpuBounds_Empty() {
+tests.testCpuBounds_Empty = function() {
   var cpu = new TimelineCpu(undefined, 1);
   cpu.updateBounds();
   assertEquals(undefined, cpu.minTimestamp);
   assertEquals(undefined, cpu.maxTimestamp);
 }
 
-function testCpuBounds_OneSlice() {
+tests.testCpuBounds_OneSlice = function() {
   var cpu = new TimelineCpu(undefined, 1);
   cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
   cpu.updateBounds();
@@ -104,7 +115,7 @@ function testCpuBounds_OneSlice() {
   assertEquals(4, cpu.maxTimestamp);
 }
 
-function testModelBounds_OneCpu() {
+tests.testModelBounds_OneCpu = function() {
   var m = new TimelineModel();
   var cpu = m.getOrCreateCpu(1);
   cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
@@ -114,7 +125,7 @@ function testModelBounds_OneCpu() {
 }
 
 
-function testModelBounds_OneCpuOneThread() {
+tests.testModelBounds_OneCpuOneThread = function() {
   var m = new TimelineModel();
   var cpu = m.getOrCreateCpu(1);
   cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
@@ -127,18 +138,18 @@ function testModelBounds_OneCpuOneThread() {
   assertEquals(5, m.maxTimestamp);
 }
 
-function testPTIDFromPidAndTid() {
+tests.testPTIDFromPidAndTid = function() {
   assertEquals('1:2', TimelineThread.getPTIDFromPidAndTid(1, 2));
 }
 
-function testAsyncSliceGroupBounds_Empty() {
+tests.testAsyncSliceGroupBounds_Empty = function() {
   var g = new TimelineAsyncSliceGroup(name);
   g.updateBounds();
   assertEquals(undefined, g.minTimestamp);
   assertEquals(undefined, g.maxTimestamp);
 }
 
-function testAsyncSliceGroupBounds_Basic() {
+tests.testAsyncSliceGroupBounds_Basic = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var g = new TimelineAsyncSliceGroup('a');
@@ -150,7 +161,7 @@ function testAsyncSliceGroupBounds_Basic() {
   assertEquals(2.5, g.maxTimestamp);
 }
 
-function testAsyncSliceGroup_rebuildSubRows_twoNonOverlappingSlices() {
+tests.testAsyncSliceGroup_rebuildSubRows_twoNonOverlappingSlices = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var g = new TimelineAsyncSliceGroup('a');
@@ -163,7 +174,7 @@ function testAsyncSliceGroup_rebuildSubRows_twoNonOverlappingSlices() {
   assertEquals(g.slices[1].subSlices[0], g.subRows[0][1]);
 }
 
-function testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices() {
+tests.testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var g = new TimelineAsyncSliceGroup('a');
@@ -178,7 +189,7 @@ function testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices() {
   assertEquals(g.slices[1], g.subRows[1][0]);
 }
 
-function testAsyncSliceGroup_rebuildSubRows_threePartlyOverlappingSlices() {
+tests.testAsyncSliceGroup_rebuildSubRows_threePartlyOverlappingSlices = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var g = new TimelineAsyncSliceGroup('a');
@@ -195,7 +206,7 @@ function testAsyncSliceGroup_rebuildSubRows_threePartlyOverlappingSlices() {
   assertEquals(g.slices[1].subSlices[0], g.subRows[1][0]);
 }
 
-function testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices() {
+tests.testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var g = new TimelineAsyncSliceGroup('a');
@@ -212,7 +223,7 @@ function testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices() {
   assertEquals(g.slices[1].subSlices[0], g.subRows[1][0]);
 }
 
-function testAsyncSliceGroup_computeSubGroups_twoThreadSpecificSlices() {
+tests.testAsyncSliceGroup_computeSubGroups_twoThreadSpecificSlices = function() {
   var p1 = new TimelineProcess(1);
   var t1 = new TimelineThread(p1, 1);
   var t2 = new TimelineThread(p1, 2);
@@ -232,13 +243,13 @@ function testAsyncSliceGroup_computeSubGroups_twoThreadSpecificSlices() {
   assertEquals(g.slices[1], subGroups[1].slices[0]);
 }
 
-function testModelCanImportEmpty() {
+tests.testModelCanImportEmpty = function() {
   var m;
   m = new TimelineModel([]);
   m = new TimelineModel('');
 }
 
-function testTimelineFilter() {
+tests.testTimelineFilter = function() {
   var s0 = new TimelineSlice('a', 0, 1, {}, 3);
   assertFalse(new TimelineFilter('').matchSlice(s0));
 
@@ -251,6 +262,8 @@ function testTimelineFilter() {
   assertFalse(new TimelineFilter('x').matchSlice(s1));
 }
 
+  return tests;
+});
 </script>
 </body>
 </html>
