--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -5,32 +5,9 @@ Copyright (c) 2012 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-<head i18n-values="dir:textdirection;">
+<head>
 <title>TimelineView tests</title>
-<link rel="stylesheet" href="overlay.css">
-<link rel="stylesheet" href="timeline.css">
-<link rel="stylesheet" href="timeline_analysis.css">
-<link rel="stylesheet" href="timeline_view.css">
 <script src="base.js"></script>
-<script src="unittest.js"></script>
-<script src="event_target.js"></script>
-<script src="ui.js"></script>
-<script src="overlay.js"></script>
-<script src="measuring_stick.js"></script>
-<script src="profiling_view.js"></script>
-<script src="timeline_analysis.js"></script>
-<script src="timeline_view.js"></script>
-<script src="timeline_model.js"></script>
-<script src="linux_perf_importer.js"></script>
-<script src="trace_event_importer.js"></script>
-<script src="timeline.js"></script>
-<script src="timeline_track.js"></script>
-<script src="sorted_array_utils.js"></script>
-<script src="fast_rect_renderer.js"></script>
-<script src="test_utils.js"></script>
-<script>
-  unittest.runAllTests();
-</script>
 <style>
   .timeline-view {
     border: 1px solid black;
@@ -44,11 +21,16 @@ found in the LICENSE file.
 </style>
 </head>
 <body>
-  <script>
-    'use strict';
+<script>
+'use strict';
 
-    var assertArrayishEquals = test_utils.assertArrayishEquals;
+base.defineModule('timeline_test')
+    .dependsOn('unittest',
+               'test_utils',
+               'timeline_view')
+    .runAllTests(function() {
 
+    var tests = {};
     /*
      * Just enough of the Timeline to support the tests below.
      */
@@ -98,7 +80,7 @@ found in the LICENSE file.
      * This test just instantiates a TimelineView and adds it to the DOM
      * to help with non-unittest UI work.
      */
-    function testInstantiateTimelineView() {
+    tests.testInstantiateTimelineView = function() {
       var events = [];
       var num_tests = 50;
       var testIndex = 0;
@@ -126,7 +108,7 @@ found in the LICENSE file.
      * This test just instantiates a FindDialog and adds it to the DOM
      * to help with non-unittest UI work.
      */
-    function testInstantiateTimelineFindControl() {
+    tests.testInstantiateTimelineFindControl = function() {
       var ctl = new tracing.TimelineFindControl();
       var didFindPrevious = false;
       var didFindNext = false;
@@ -153,39 +135,39 @@ found in the LICENSE file.
       assertTrue(didFindNext);
     }
 
-    function testFindControllerNoTimeline() {
+    tests.testFindControllerNoTimeline = function() {
       var controller = new tracing.TimelineFindController();
       controller.findNext();
       controller.findPrevious();
     }
 
-    function testFindControllerEmptyHit() {
+    tests.testFindControllerEmptyHit = function() {
       var timeline = new FakeTimeline();
       var controller = new tracing.TimelineFindController();
       controller.timeline = timeline;
 
       timeline.selection = new tracing.TimelineSelection();
       controller.findNext();
-      assertArrayishEquals([], timeline.selection);
+      assertArrayShallowEquals([], timeline.selection);
       controller.findPrevious();
-      assertArrayishEquals([], timeline.selection);
+      assertArrayShallowEquals([], timeline.selection);
     }
 
-    function testFindControllerOneHit() {
+    tests.testFindControllerOneHit = function() {
       var timeline = new FakeTimeline();
       var controller = new tracing.TimelineFindController();
       controller.timeline = timeline;
 
       timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1];
       controller.findNext();
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
       controller.findNext();
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
       controller.findPrevious();
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
     }
 
-    function testFindControllerMultipleHits() {
+    tests.testFindControllerMultipleHits = function() {
       var timeline = new FakeTimeline();
       var controller = new tracing.TimelineFindController();
       controller.timeline = timeline;
@@ -194,20 +176,20 @@ found in the LICENSE file.
 
       // Loop through hits then when we wrap, try moving backward.
       controller.findNext();
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
       controller.findNext();
-      assertArrayishEquals([2], timeline.selection);
+      assertArrayShallowEquals([2], timeline.selection);
       controller.findNext();
-      assertArrayishEquals([3], timeline.selection);
+      assertArrayShallowEquals([3], timeline.selection);
       controller.findNext();
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
       controller.findPrevious();
-      assertArrayishEquals([3], timeline.selection);
+      assertArrayShallowEquals([3], timeline.selection);
       controller.findPrevious();
-      assertArrayishEquals([2], timeline.selection);
+      assertArrayShallowEquals([2], timeline.selection);
     }
 
-    function testFindControllerChangeFilterAfterNext() {
+    tests.testFindControllerChangeFilterAfterNext = function() {
       var timeline = new FakeTimeline();
       var controller = new tracing.TimelineFindController();
       controller.timeline = timeline;
@@ -219,21 +201,21 @@ found in the LICENSE file.
       timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [4];
       controller.filterText = "asdfsf";
       controller.findNext();
-      assertArrayishEquals([4], timeline.selection);
+      assertArrayShallowEquals([4], timeline.selection);
     }
 
-    function testFindControllerSelectsFirstItemImmediately() {
+    tests.testFindControllerSelectsFirstItemImmediately = function() {
       var timeline = new FakeTimeline();
       var controller = new tracing.TimelineFindController();
       controller.timeline = timeline;
       timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1,2,3];
       controller.filterText = "asdfsf";
-      assertArrayishEquals([1], timeline.selection);
+      assertArrayShallowEquals([1], timeline.selection);
       controller.findNext();
-      assertArrayishEquals([2], timeline.selection);
+      assertArrayShallowEquals([2], timeline.selection);
     }
 
-    function testFindControllerWithRealTimeline() {
+    tests.testFindControllerWithRealTimeline = function() {
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
@@ -261,6 +243,8 @@ found in the LICENSE file.
       assertEquals(0, timeline.selection.length);
     }
 
-  </script>
+    return tests;
+});
+</script>
 </body>
 </html>
